--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ table {
 
 .top-header-row {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   width: 100%;
   padding-bottom: 3.5em;
 }
@@ -212,7 +212,7 @@ thead tr th:last-child::after {
   background: var(--hover-color);
 }
 
-.data-table tbody tr {
+.data-table tbody tr:not(.description-row) {
   cursor: pointer;
 }
 
@@ -265,13 +265,6 @@ tr.description-row td.desc-cell {
 /* =========================
    IMAGE CELLS
 ========================= */
-tr.description-row td:nth-child(5),
-tr.description-row td:nth-child(6) {
-  padding: 0;
-  vertical-align: top;
-  overflow: hidden;
-  width: 10%;
-}
 
 tr.description-row td .img-container {
   width: 100%;
@@ -332,3 +325,23 @@ tr.description-row {
 tr.description-row td a {
   cursor: pointer;
 }
+
+
+
+/* Universal image-cell style for 5, 6, 7 */
+tr.description-row td.media-cell {
+  padding: 10;
+  vertical-align: top;
+  overflow: hidden;
+  width: 10%;
+}
+
+tr.description-row td.media-cell .img-container img.thumb-img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
